On retire les éléments de Maven qui ne servent plus